--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
-    "@shopify/flash-list": "^1.6.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@shopify/flash-list": "1.4.3",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-image": "~1.3.5",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "react": "18.2.0",
@@ -25,13 +29,13 @@
     "react-native-actions-sheet": "^0.9.0-alpha.24",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.3.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6",
-    "expo-image-picker": "~14.3.2",
-    "expo-secure-store": "~12.3.1"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
